Fix visibility issue
Fixes visibility issue that occurred when used with Scratch Addons addon "Profile Banner" enabled.

--- a/features/follows-you/style.css
+++ b/features/follows-you/style.css
@@ -1,6 +1,7 @@
 .scratchtoolsFollowsYou {
-	opacity: .5;
-	font-size: .8rem;
+	opacity: .6;
+	text-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
+	font-size: .9rem;
 }
 .header-text > h2 {
 	display: inline-block;
